<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>



    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_header_height"

        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        android:id="@+id/drawer_header_main">
        <!--    android:background=""-->
        <!--    android:theme="@style/ThemeOverlay.AppCompat.Dark"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="7dp">

            <ImageView
                android:id="@+id/headImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/drawer_header_desc"
                android:paddingTop="@dimen/drawer_header_vertical_spacing"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="@dimen/drawer_header_vertical_spacing"
                    android:text="请登录"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/item_title_size"
                    tools:text="@string/drawer_header_user_name" />

                <TextView
                    android:id="@+id/user_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:text="@string/drawer_header_user_sign" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>
